--- a/Login.html
+++ b/Login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Inventory Login</title>
 
-    <link rel="stylesheet" href="Login.css"> 
+    <link rel="stylesheet" href="components(css)/Login.css"> 
 </head>
 
 <body>
@@ -38,7 +38,7 @@
 </div>
 
 <!-- logic firebase tas iba pa -->
-<script type="module" src="Login.js"></script>
+<script type="module" src="components(js)/Login.js"></script>
 
 </body>
 </html>
