--- a/Register.html
+++ b/Register.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Create Account</title>
-    <link rel="stylesheet" href="Register.css" />
+    <link rel="stylesheet" href="components(css)/Register.css" />
 </head>
 <body>
   <div class="auth-container">
@@ -45,6 +45,6 @@
     </div>
   </div>
 
-  <script type="module" src="Register.js"></script>
+  <script type="module" src="components(js)/Register.js"></script>
 </body>
 </html>
