--- a/main.html
+++ b/main.html
@@ -186,5 +186,5 @@
         </footer>
     </div>
 </body>
-<script src="module.js" type="module"></script>
+<script src="components(js)/main.js" type="module"></script>
 </html></footer></div>
