--- a/Login.html
+++ b/Login.html
@@ -5,6 +5,7 @@
     <title>Inventory Login</title>
 
     <link rel="stylesheet" href="components(css)/Login.css"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
 </head>
 
 <body>
@@ -25,7 +26,8 @@
         <label>Password</label>
         <div class="password-wrapper">
             <input type="password" id="password" placeholder="Enter your password" required>
-            <span class="toggle-btn" onclick="togglePassword('password')">👁</span>
+            <span class="toggle-btn" onclick="togglePassword('password', this)">
+              <i class="fa-solid fa-eye"></i></span>  
         </div>
 
         <button class="login-btn" onclick="login()">Sign In</button>
