--- a/Login.html
+++ b/Login.html
@@ -34,7 +34,7 @@
 
         <div class="links">
             <a href="Register.html">Create an account</a>
-            <a href="#">Forgot password?</a>
+            <a href="Reset_Pass.html">Forgot password?</a>
         </div>
     </div>
 </div>
