--- a/Reset_Pass.html
+++ b/Reset_Pass.html
@@ -22,15 +22,15 @@
         <label>Email</label>
         <input type="email" id="email" placeholder="admin@inventory.com" required>
 
-        <button class="reset-btn" onclick="login()">Send Reset Link</button>
+        <button class="reset-btn" onclick="Login()">Send Reset Link</button>
 
-        <button class="login-btn" onclick="login()">Back to Sign In</button>
+        <button class="login-btn" onclick="goToLogin()">Back to Sign In</button>
         
     </div>
 </div>
 
 <!-- logic firebase tas iba pa -->
-<script type="module" src="components(js)/styles.js"></script>
+<script type="module" src="components(js)/Reset.js"></script>
 
 </body>
 </html>
