Fixed the eye icon toggle password function to the correct input field.

--- a/Register.html
+++ b/Register.html
@@ -35,7 +35,7 @@
         <label>Confirm Password</label>
         <div class="password-wrapper">
             <input type="password" id="confirmPassword" placeholder="Repeat password" required>
-            <span class="toggle-btn" onclick="togglePassword('password', this)">
+            <span class="toggle-btn" onclick="togglePassword('confirmPassword', this)">
               <i class="fa-solid fa-eye"></i></span>  
         </div>
 
