--- a/Dashboard.html
+++ b/Dashboard.html
@@ -13,22 +13,32 @@
         <i class="fas fa-bars"></i>
     </button>
 
-    <aside class="sidebar" id="sidebar">
-        <button class="close-btn"><i class="fas fa-times"></i></button>
+    <aside class="sidebar">
+        <button class="close-btn">
+            <i class="fas fa-times"></i>
+        </button>
+        <div class="sidebar-content">
+            <div class="sidebar-header">
+                <h2>Inventory MS</h2>
+                <span class="user-role">Admin User</span>
+            </div>
 
-        <div class="sidebar-header">
-            <h2>Inventory Management System</h2>
-            <p>Admin User</p>
+            <nav class="sidebar-nav">
+                <a href="#dashboard" class="nav-link"><i class="fas fa-chart-line"></i>Dashboard</a>
+                <a href="Login.html" class="nav-link"><i class="fas fa-box"></i>Products</a>
+                <a href="#categories" class="nav-link"><i class="fas fa-list"></i>Categories</a>
+                <a href="#activity" class="nav-link"><i class="fas fa-history"></i>Activity Log</a>
+                <a href="#reports" class="nav-link"><i class="fas fa-file-alt"></i>Reports</a>
+                <a href="#archived" class="nav-link"><i class="fas fa-archive"></i>Archived</a>
+                <a href="#settings" class="nav-link"><i class="fas fa-gear"></i>Settings</a>
+            </nav>
+
+            <div class="sidebar-footer">
+                <a href="Login.html" class="logout"><i class="fas fa-arrow-right-from-bracket"></i>Logout</a>
+            </div>
         </div>
-
-        <a href="#dashboard" class="nav-link"><i class="fas fa-chart-line"></i>Dashboard</a>
-        <a href="Login.html" class="nav-link"><i class="fas fa-box"></i>Products</a>
-        <a href="#categories" class="nav-link"><i class="fas fa-list"></i>Categories</a>
-        <a href="#activity" class="nav-link"><i class="fas fa-history"></i>Activity Log</a>
-        <a href="#reports" class="nav-link"><i class="fas fa-file-alt"></i>Reports</a>
-        <a href="#archived" class="nav-link"><i class="fas fa-archive"></i>Archived</a>
-        <a href="#settings" class="nav-link"><i class="fas fa-gear"></i>Settings</a>
     </aside>
+
 
     <div class="overlay"></div>
 
