--- a/Dashboard.html
+++ b/Dashboard.html
@@ -70,7 +70,7 @@
                 <div class="stat-card-icon" style="background:#fff7d6;color:#c29500;">
                     <i class="fas fa-dollar-sign"></i>
                 </div>
-                <div><h4>Inventory Value</h4><p>$0.00</p></div>
+                <div><h4>Inventory Value</h4><p>₱9999999.00</p></div>
             </div>
         </div>
 
@@ -78,22 +78,23 @@
         <div class="dashboard-grid">
             <section class="dashboard-card">
                 <h3>Products by Category</h3>
-                <div class="chart-placeholder">Chart Placeholder</div>
+                <div class="chart-placeholder">Bar Graph Chart Placeholder</div>
             </section>
 
             <section class="dashboard-card">
                 <h3>Inventory Value Distribution</h3>
-                <div class="chart-placeholder">Chart Placeholder</div>
+                <div class="chart-placeholder">Pie Chart Placeholder</div>
+            </section>
+
+            <!--Possible Change ng Layout instead ng Original?-->
+            <section class="dashboard-card">
+                <h3>Low Stock Alerts</h3>
+                <div class="chart-placeholder">Alerts Placeholder</div>
             </section>
 
             <section class="dashboard-card">
-                <h3>Recent Activity</h3>
-                <div class="chart-placeholder">Activity Placeholder</div>
-            </section>
-
-            <section class="dashboard-card">
-                <h3>Top Selling Products</h3>
-                <div class="chart-placeholder">Top Products Placeholder</div>
+                <h3>Recent Activities</h3>
+                <div class="chart-placeholder">Recent Activities Placeholder</div>
             </section>
         </div>
     </main>
