--- a/Register.html
+++ b/Register.html
@@ -44,7 +44,8 @@
         <div class="links">
             <a href="Login.html">Already have an account? Sign In</a>
         </div>
-
+        
+        <!--Will appear if successful user mag-login-->
         <div id="successPopup" class="success-popup">
             <div class="popup-content">
                 <h2>Account Created!</h2>
