--- a/Reset_Pass.html
+++ b/Reset_Pass.html
@@ -22,7 +22,7 @@
 
         <form id="password-reset-form">
             <label>Email</label>
-            <input type="email" id="email" placeholder="admin@inventory.com" required>
+            <input type="email" id="email" placeholder="admin@google.com" required>
 
         <button class="reset-btn" onclick="Login()">Send Reset Link</button>
         
