--- a/main.html
+++ b/main.html
@@ -1,190 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inventory Management System</title>
-    <meta name="description" content="Simple landing page for an Inventory Management System — track stock, manage suppliers, and view reports." />
-    <style>
-        :root{
-            --bg:#0f1724; --card:#0b1220; --muted:#9aa4b2; --accent:#4f46e5; --glass: rgba(255,255,255,0.04);
-            --radius:12px; color-scheme: dark;
-        }
-        *{box-sizing:border-box}
-        html,body{height:100%}
-        body{
-            margin:0;
-            font-family:Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-            background: linear-gradient(180deg,var(--bg) 0%, #071028 60%);
-            color:#e6eef8;
-            -webkit-font-smoothing:antialiased;
-            -moz-osx-font-smoothing:grayscale;
-            line-height:1.45;
-            padding:32px;
-        }
-        .container{max-width:1100px;margin:0 auto;}
-        header{display:flex;align-items:center;justify-content:space-between;gap:16px;margin-bottom:36px}
-        .brand{display:flex;align-items:center;gap:12px}
-        .logo{
-            width:48px;height:48px;border-radius:10px;
-            background:linear-gradient(135deg,var(--accent),#06b6d4);
-            display:flex;align-items:center;justify-content:center;font-weight:700;color:white;
-            box-shadow: 0 6px 20px rgba(79,70,229,0.18);
-        }
-        .title{font-size:1rem;font-weight:600}
-        nav{display:flex;gap:12px;align-items:center}
-        .btn{
-            background:transparent;border:1px solid rgba(255,255,255,0.06);padding:8px 14px;border-radius:9px;color:var(--muted);
-            text-decoration:none;font-weight:600;font-size:0.95rem;
-        }
-        .btn.primary{
-            background:linear-gradient(90deg,var(--accent),#06b6d4);border:0;color:white;box-shadow:0 6px 18px rgba(79,70,229,0.18)
-        }
-        main .hero{
-            display:grid;grid-template-columns:1fr 360px;gap:28px;align-items:center;margin-bottom:36px;
-        }
-        .hero .content h1{font-size:2.1rem;margin:0 0 12px}
-        .hero .content p{color:var(--muted);margin:0 0 20px}
-        .stats{display:flex;gap:12px}
-        .stat{background:var(--card);padding:12px;border-radius:12px;min-width:110px;text-align:center}
-        .stat strong{display:block;font-size:1.1rem}
-        .panel{
-            background:linear-gradient(180deg, rgba(255,255,255,0.02), var(--glass));
-            border-radius:var(--radius);padding:18px;color:var(--muted);
-            box-shadow: 0 8px 30px rgba(2,6,23,0.6); border:1px solid rgba(255,255,255,0.03)
-        }
-        .panel h3{margin:0 0 12px;color:#e6eef8;font-size:1rem}
-        .features{display:grid;grid-template-columns:repeat(3,1fr);gap:14px;margin-top:18px}
-        .feature{background:transparent;padding:12px;border-radius:10px;border:1px solid rgba(255,255,255,0.03)}
-        footer{margin-top:36px;color:var(--muted);font-size:0.9rem;text-align:center}
-        /* Responsive */
-        @media (max-width:880px){
-            .hero{grid-template-columns:1fr;grid-auto-rows:auto}
-            .features{grid-template-columns:repeat(2,1fr)}
-            header{flex-direction:column;align-items:flex-start;gap:12px}
-        }
-        @media (max-width:520px){
-            .features{grid-template-columns:1fr}
-            .logo{width:40px;height:40px}
-            .hero .content h1{font-size:1.6rem}
-        }
-    </style>
 </head>
 <body>
-    <div class="container">
-        <header>
-            <div class="brand" role="img" aria-label="Inventory Management System">
-                <div class="logo">IMS</div>
-                <div>
-                    <div class="title">Inventory Management System</div>
-                    <div style="font-size:0.85rem;color:var(--muted)">Smart stock & supplier tracking</div>
-                </div>
-            </div>
-            <nav>
-                <a class="btn" href="#features">Features</a>
-                <a class="btn" href="#pricing">Pricing</a>
-                <a class="btn" href="#contact">Contact</a>
-                <a class="btn primary" href="#get-started">Get Started</a>
-            </nav>
-        </header>
-
-        <main>
-            <section class="hero">
-                <div class="content">
-                    <h1>Manage inventory with clarity and speed</h1>
-                    <p>Track stock levels, manage suppliers, automate reorder rules and get actionable reports — all from a single lightweight interface.</p>
-                    <div style="display:flex;gap:12px;align-items:center">
-                        <a class="btn primary" href="#get-started">Start Free Trial</a>
-                        <a class="btn" href="#demo">Request Demo</a>
-                        <span style="color:var(--muted);font-size:0.95rem;margin-left:12px">No credit card required</span>
-                    </div>
-
-                    <div class="stats" style="margin-top:18px">
-                        <div class="stat">
-                            <span style="font-size:0.85rem;color:var(--muted)">Items</span>
-                            <strong>1,240+</strong>
-                        </div>
-                        <div class="stat">
-                            <span style="font-size:0.85rem;color:var(--muted)">Suppliers</span>
-                            <strong>320</strong>
-                        </div>
-                        <div class="stat">
-                            <span style="font-size:0.85rem;color:var(--muted)">Saved /mo</span>
-                            <strong>$1,200</strong>
-                        </div>
-                    </div>
-                </div>
-
-                <aside class="panel" aria-label="Dashboard preview">
-                    <h3>Quick overview</h3>
-                    <div style="display:flex;flex-direction:column;gap:10px">
-                        <div style="display:flex;justify-content:space-between;align-items:center">
-                            <div style="font-weight:700">Low stock</div>
-                            <div style="color:#ffb703">12 items</div>
-                        </div>
-                        <div style="display:flex;justify-content:space-between;align-items:center">
-                            <div style="font-weight:700">Pending orders</div>
-                            <div style="color:#60a5fa">4</div>
-                        </div>
-                        <div style="display:flex;justify-content:space-between;align-items:center">
-                            <div style="font-weight:700">Today shipments</div>
-                            <div style="color:#34d399">18</div>
-                        </div>
-                        <div style="height:10px"></div>
-                        <div style="background:rgba(255,255,255,0.03);height:8px;border-radius:6px;overflow:hidden">
-                            <div style="width:64%;height:100%;background:linear-gradient(90deg,var(--accent),#06b6d4)"></div>
-                        </div>
-                    </div>
-                </aside>
-            </section>
-
-            <section id="features" class="panel" style="margin-bottom:18px">
-                <h3>Core features</h3>
-                <div class="features">
-                    <div class="feature">
-                        <strong>Real-time stock</strong>
-                        <div style="color:var(--muted);font-size:0.95rem;margin-top:6px">Instant updates, location-aware counts and audit logs.</div>
-                    </div>
-                    <div class="feature">
-                        <strong>Supplier management</strong>
-                        <div style="color:var(--muted);font-size:0.95rem;margin-top:6px">Contacts, purchase terms and lead times in one place.</div>
-                    </div>
-                    <div class="feature">
-                        <strong>Automated reorder</strong>
-                        <div style="color:var(--muted);font-size:0.95rem;margin-top:6px">Set min/max and reorder rules to avoid stockouts.</div>
-                    </div>
-                    <div class="feature">
-                        <strong>Reporting & alerts</strong>
-                        <div style="color:var(--muted);font-size:0.95rem;margin-top:6px">Exportable reports and configurable notifications.</div>
-                    </div>
-                    <div class="feature">
-                        <strong>Multi-location</strong>
-                        <div style="color:var(--muted);font-size:0.95rem;margin-top:6px">Handle warehouses and stores with ease.</div>
-                    </div>
-                    <div class="feature">
-                        <strong>CSV import/export</strong>
-                        <div style="color:var(--muted);font-size:0.95rem;margin-top:6px">Quickly migrate or backup your data.</div>
-                    </div>
-                </div>
-            </section>
-
-            <section id="get-started" class="panel" style="display:flex;justify-content:space-between;align-items:center;gap:20px">
-                <div>
-                    <h3 style="margin-bottom:6px">Ready to get started?</h3>
-                    <div style="color:var(--muted)">Create an account and import your inventory in minutes.</div>
-                </div>
-                <div style="display:flex;gap:10px">
-                    <a class="btn primary" href="/signup.html">Create account</a>
-                    <a class="btn" href="/login.html">Sign in</a>
-                </div>
-            </section>
-
-        </main>
-
-        <footer id="contact">
-            Built for small teams • <span style="color:var(--muted)">support@example.com</span>
-        </footer>
-    </div>
+    
 </body>
-<script src="components(js)/main.js" type="module"></script>
-</html></footer></div>
+</html>
