Bug Fix - Reset Password
Bug Fix No.1
  - Fixed the identified bug for sending a reset email even though there are no email registered in the system.

  - Fixed a small error in the HTML file. The button has `onclick="Login()"` but should be `type="submit"` to trigger the form submission.

--- a/Reset_Pass.html
+++ b/Reset_Pass.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Inventory Reset Password</title>
 
-    <link rel="stylesheet" href="components(css)/styles.css"> 
+    <link rel="stylesheet" href="components(css)/Reset.css"> 
 </head>
 
 <body>
@@ -24,9 +24,7 @@
             <label>Email</label>
             <input type="email" id="email" placeholder="admin@inventory.com" required>
 
-        <button class="reset-btn" onclick="Login()">Send Reset Link</button>
-
-        <button class="login-btn" onclick="goToLogin()">Back to Sign In</button>
+        <button class="reset-btn" type="submit">Send Reset Link</button>
         
         <div class="links">
             <a href="Register.html">Create an account</a>
